--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1.0 maximum-scale=1 user-scalable=no "
     />
     <meta name="MobileOptimized" content="640" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Click Test</title>
     <script src="script.js"></script>
