Changed button to div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 id="Counter">0</h2>
     <h2 id="Timer"></h2>
     <div class="container">
-      <input type="button" id="Clicker" value="Click Me" onclick="Clicked()" />
+      <div id="Clicker" onclick="Clicked()">Click Me!</div>
       <br /><br /><br />
       <input type="button" id="Refresh" value="Retry" onclick="Retry()" />
     </div>
